<resources>

    <string name="sekolah_not_found">Data sekolah tidak ditemukan!</string>
    <string name="murid_not_found">Belum ada murid, tekan tombol untuk menambah murid!</string>

    <string name="input_nama_sekolah">Masukkan Nama Sekolah</string>
    <string name="nama_sekolah">Nama Sekolah</string>

    <string name="input_jumlah_murid">Pilih Jumlah Murid</string>

    <string name="form_nama_murid">Nama </string>
    <string name="form_kelas_murid">Kelas </string>

    <string name="app_name">Absen Yetece</string>

    <string name="nama_murid">Nama Murid</string>
    <string name="kelas_murid">Kelas Murid</string>

    <string name="cari">Cari</string>
    <string name="hadir">Hadir</string>
    <string name="tidak_hadir">Tidak Hadir</string>
    <string name="izin">Izin</string>

    <string name="ganti_password">Ganti Password</string>
    <string name="old_pass">Password Lama</string>
    <string name="new_pass">Password Baru</string>

    <!-- Button String -->
    <string name="hapus_sekolah">Hapus Sekolah</string>
    <string name="tambah_murid">Tambah Murid</string>
    <string name="kirim_absen">Simpan</string>
    <string name="tambah">Tambah</string>
    <string name="hapus_murid">Hapus Murid</string>
    <string name="konfirmasi_delete">DEL</string>
    <string name="export_xls">Export .XLS</string>
    <string name="clear">Clear</string>
    <string name="absen">Absen</string>

</resources>
