<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_do_attendance_check"
        android:icon="@drawable/ic_assignment_white_18dp"
        android:title="@string/absen"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_delete_students_confirmation"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/konfirmasi_delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_add_students"
        android:title="@string/tambah_murid" />

    <item
        android:id="@+id/menu_item_delete_students"
        android:title="@string/hapus_murid" />

    <item
        android:id="@+id/menu_item_delete_school"
        android:title="@string/hapus_sekolah" />

    <item
        android:id="@+id/menu_item_export_xls"
        android:title="@string/export_xls" />

    <item
        android:id="@+id/menu_item_clear_attendance_history"
        android:title="@string/clear" />

</menu>